Fix problem where router rerendered components too much

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,3 +10,16 @@
   flex-direction: row;
   justify-content: space-between;
 }
+
+.headerTextElement {
+  padding: 0rem;
+  user-select: none;
+  font-size: 1.7rem;
+  margin: 2rem;
+  color: black;
+}
+
+.headerTextElement:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
